main/default/objects/pharos__Trace_Request__c/pharos__Trace_Request__c.object-meta.xml
<CustomObject>
    <label>Trace Request</label>
    <nameField>
        <displayFormat>TR-{0000000}</displayFormat>
        <label>Trace Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trace Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>