main/default/objects/pharos__Trace_Request__c/fields/pharos__Apex_Code__c.field-meta.xml
<CustomField>
    <fullName>pharos__Apex_Code__c</fullName>
    <label>Apex Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>