main/default/objects/pharos__Trace_Request__c/fields/pharos__Apex_Profiling__c.field-meta.xml
<CustomField>
    <fullName>pharos__Apex_Profiling__c</fullName>
    <label>Apex Profiling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>