main/default/objects/pharos__Trace_Request__c/fields/pharos__Callout__c.field-meta.xml
<CustomField>
    <fullName>pharos__Callout__c</fullName>
    <label>Callout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>