main/default/objects/pharos__Trace_Request__c/fields/pharos__Database__c.field-meta.xml
<CustomField>
    <fullName>pharos__Database__c</fullName>
    <label>Database</label>
    <length>255</length>
    <type>Text</type>
</CustomField>