main/default/objects/pharos__Trace_Request__c/fields/pharos__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pharos__End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>