main/default/objects/pharos__Trace_Request__c/fields/pharos__Last_Result_Date__c.field-meta.xml
<CustomField>
    <fullName>pharos__Last_Result_Date__c</fullName>
    <label>Last Result Date</label>
    <type>DateTime</type>
</CustomField>