main/default/objects/pharos__Trace_Request__c/fields/pharos__Next_Trace_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pharos__Next_Trace_Start_Date__c</fullName>
    <label>Next Trace Start Date</label>
    <type>DateTime</type>
</CustomField>