main/default/objects/pharos__Trace_Request__c/fields/pharos__Schedule__c.field-meta.xml
<CustomField>
    <fullName>pharos__Schedule__c</fullName>
    <label>Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>