main/default/objects/pharos__Trace_Request__c/fields/pharos__Source__c.field-meta.xml
<CustomField>
    <fullName>pharos__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>