main/default/objects/pharos__Trace_Request__c/fields/pharos__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pharos__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>