main/default/objects/pharos__Trace_Request__c/fields/pharos__Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>