main/default/objects/pharos__Trace_Request__c/fields/pharos__System__c.field-meta.xml
<CustomField>
    <fullName>pharos__System__c</fullName>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>