main/default/objects/pharos__Trace_Request__c/fields/pharos__Traced_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Traced_Entity_Id__c</fullName>
    <label>Traced Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>