main/default/objects/pharos__Trace_Request__c/fields/pharos__Validation__c.field-meta.xml
<CustomField>
    <fullName>pharos__Validation__c</fullName>
    <label>Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>