main/default/objects/pharos__Trace_Request__c/fields/pharos__Visualforce__c.field-meta.xml
<CustomField>
    <fullName>pharos__Visualforce__c</fullName>
    <label>Visualforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>