main/default/objects/pharos__Trace_Request__c/fields/pharos__Workflow__c.field-meta.xml
<CustomField>
    <fullName>pharos__Workflow__c</fullName>
    <label>Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>